--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "api node sena",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "dev": "nodemon backend/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +18,11 @@
   "homepage": "https://github.com/javiermetal2/nodeJSSena#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
   }
 }
