--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "api node sena",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon backend/index.js"
+    "dev": "nodemon backend/index.js",
+    "debug": "nodemon --inspect backend/index.js"
   },
   "repository": {
     "type": "git",
